add templates feature, there are some issue in it with resources location persists.

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -9,7 +9,7 @@ jdbc.username=online_education
 jdbc.password=online_education
 
 #项目路径
-contextPath=http://127.0.0.1:8080
+contextPath=http://127.0.0.1:8080/webapp
 
 #项目名
 projectName=inxedu
