--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        -->
         <!--继承inxdemo-->
 
         <!--外部jar依赖-->
@@ -323,6 +331,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+                -->
             </plugin>
         </plugins>
     </build>
